# bazel-registry

./: .gitignore  LICENSE  README.md
.github/workflows/: test-registry.yml
modules/argon2/: MODULE.bazel  metadata.json  source.json
modules/argon2/20190702/: argon2.BUILD  source.json
modules/argon2/patches/: add_build_file.patch
modules/argtable3/: metadata.json
modules/argtable3/3.2.2/: MODULE.bazel  source.json
modules/bazel_misc/: metadata.json
modules/bazel_misc/v0.0.1/: MODULE.bazel  source.json
modules/box2d/: metadata.json
modules/box2d/3.0.0/: MODULE.bazel  box2d.BUILD  source.json
modules/c-ares/: metadata.json
modules/c-ares/1.34.6/: MODULE.bazel  source.json
modules/cglm/: metadata.json
modules/cglm/0.9.6/: MODULE.bazel  source.json
modules/cjson/: metadata.json
modules/cjson/1.7.19/: MODULE.bazel  source.json
modules/csv_fast/: metadata.json
modules/csv_fast/0.1.0/: MODULE.bazel  source.json
modules/czmq/: metadata.json
modules/czmq/4.2.1/: MODULE.bazel  source.json
modules/gnuplot_i/: metadata.json
modules/gnuplot_i/1.0/: MODULE.bazel  source.json
modules/graphblas/: metadata.json
modules/graphblas/10.3.1/: MODULE.bazel  source.json
modules/graphviz/: metadata.json
modules/graphviz/15.0.0/: MODULE.bazel  source.json
modules/gunslinger/: metadata.json
modules/gunslinger/0.03-alpha/: MODULE.bazel  source.json
modules/libb64/: metadata.json
modules/libb64/2.0.0.1/: MODULE.bazel  source.json
modules/libcsv/: metadata.json
modules/libcsv/b1d5212831842ee5869d99bc208a21837e4037d5/: MODULE.bazel  source.json
modules/liblinear/: metadata.json
modules/liblinear/247/: MODULE.bazel  liblinear.BUILD  source.json
modules/libsodium/: metadata.json
modules/libsodium/1.0.20/: MODULE.bazel  libsodium.BUILD  source.json
modules/libzmq/: metadata.json
modules/libzmq/4.3.5/: MODULE.bazel  libzmq.BUILD  source.json
modules/linmath/: metadata.json
modules/linmath/3eef82841046507e16a0f6194a61cee2eadd34b3/: MODULE.bazel  source.json
modules/lmdb/: metadata.json
modules/lmdb/0.9.31/: MODULE.bazel  source.json
modules/matio/: metadata.json
modules/matio/1.5.27/: MODULE.bazel  source.json
modules/mpc/: metadata.json
modules/mpc/0.9.0/: MODULE.bazel  source.json
modules/openblas/: metadata.json
modules/openblas/0.3.33/: MODULE.bazel  source.json
modules/openblas_lapack/: metadata.json
modules/openmp/: metadata.json
modules/pbplots/: metadata.json
modules/pcg/: metadata.json
modules/raylib/: metadata.json
modules/sds/: metadata.json
modules/sha1/: metadata.json
modules/throw_the_switch/: metadata.json
modules/utest/: metadata.json
modules/utest/f2fe2880253cdb090c906958e4937d24717aa39b/overlay/: BUILD.bazel
modules/uthash/: metadata.json
modules/yyjson/: metadata.json
tools/: add_module.py
(+149 files in other folders)
